# wasset

./: Cargo.toml  README.md  build.rs
src/: lib.rs  parse.rs
src/encode/: mod.rs  proc_macro.rs
wasset_example/: Cargo.toml  build.rs
wasset_example/src/: main.rs
wasset_example/wasset_example_macro/: Cargo.toml
wasset_example/wasset_example_macro/src/: lib.rs
wasset_example/wasset_example_module/: Cargo.toml
wasset_example/wasset_example_module/assets/: Wasset.toml
wasset_example/wasset_example_module/assets/submodule/: more_text.txt
wasset_example/wasset_example_module/src/: lib.rs
wasset_example/wasset_example_schema/: Cargo.toml
wasset_example/wasset_example_schema/src/: lib.rs
